--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,22 @@
   <title>Title</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-</head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <style>
+      footer {
+          position: fixed;
+          bottom: 0;
+          width: 100%;
+      }
+
+      div.container {
+          margin-top: 25vh;
+      }
+  </style>
+</head>
 <body>
-<div class="container my-5">
+<div class="container">
   <div class="row">
     <div class="col-8 m-auto">
       <div class="border border-3 bg-primary">
@@ -28,49 +39,46 @@
   </div>
 </div>
 
-<!--TODO FIX ICONS-->
 <footer class="pt-5">
-            <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-secondary">
-                <div class="col-md-4 d-flex align-items-center">
-                    <a class="mb-3 me-3 mb-md-0 text-muted lh-1" href={"https://github.com/aon2003"}>
-                        <FontAwesomeIcon icon={faGithub} />
-                    </a>
-                    <a class="mb-3 me-3 mb-md-0 text-muted lh-1" href="/#">
-                        <FontAwesomeIcon icon={faCode} />
-                    </a>
-                    <span class="text-muted">
-                        © 2021 ELSYS Helper, Inc
-                    </span>
-                </div>
+  <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-secondary">
+    <div class="col-md-4 d-flex align-items-center">
+      <a class="mb-3 me-3 mb-md-0 text-muted lh-1" href="https://github.com/aon2003">
+        <i class="fa-brands fa-github"></i>
+      </a>
+      <a class="mb-3 me-3 mb-md-0 text-muted lh-1" href="/#">
+        <i class="fa-solid fa-code"></i>
+      </a>
+      <span class="text-muted">© 2021 ELSYS Helper, Inc</span>
+    </div>
 
-                <div class="justify-content-center">
-                    <span class="text-muted">
-                        Made with <FontAwesomeIcon icon={faHeart}/> and <FontAwesomeIcon icon={faCoffee} /> by <a class="text-muted" href="https://www.linkedin.com/in/alex-naida/">Alex Naida</a>
-                    </span>
-                </div>
+    <div class="justify-content-center">
+      <span class="text-muted">
+          Made with <i class="fa-solid fa-heart"></i> and <i class="fa-solid fa-mug-saucer"></i> by <a class="text-muted" href="https://www.linkedin.com/in/alex-naida/">Alex Naida</a>
+      </span>
+    </div>
 
-                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                    <li>
-                        <span class="text-muted">ELSYS / TUES</span>
-                    </li>
-                    <li class="ms-3">
-                        <a class="text-muted" href={"https://www.tues.bg/"} rel="noopener noreferrer" target="_blank">
-                            <FontAwesomeIcon icon={faGlobe}/>
-                        </a>
-                    </li>
-                    <li class="ms-3">
-                        <a class="text-muted" href={"https://www.instagram.com/tues.bg/"} rel="noopener noreferrer" target="_blank">
-                            <FontAwesomeIcon icon={faInstagram}/>
-                        </a>
-                    </li>
-                    <li class="ms-3">
-                        <a class="text-muted" href={"https://www.linkedin.com/school/tues/"} rel="noopener noreferrer" target="_blank">
-                            <FontAwesomeIcon icon={faLinkedin}/>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </footer>
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li>
+        <span class="text-muted">ELSYS / TUES</span>
+      </li>
+      <li class="ms-3">
+        <a class="text-muted" href="https://www.tues.bg/" rel="noopener noreferrer" target="_blank">
+          <i class="fa-solid fa-globe"></i>
+        </a>
+      </li>
+      <li class="ms-3">
+        <a class="text-muted" href="https://www.instagram.com/tues.bg/" rel="noopener noreferrer" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </li>
+      <li class="ms-3">
+        <a class="text-muted" href="https://www.linkedin.com/school/tues/" rel="noopener noreferrer" target="_blank">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+      </li>
+    </ul>
+  </div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
